Addressing issues found in the code review: missing @author, should use Integer.valueOf